--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,5 @@
 ---
-import SimpleContentLayout from '../layouts/SimpleContentLayout.astro';
+import SimpleContentLayout from '@/layouts/SimpleContentLayout.astro';
 ---
 
 <SimpleContentLayout title="About">
@@ -23,7 +23,7 @@ import SimpleContentLayout from '../layouts/SimpleContentLayout.astro';
         I'm a technical architect with a maths background. I love to learn and explore new ideas.
     </p>
     <p>
-        <a href="/blog/exploration-and-emergence">Exploration and emergence</a> is a home for me to share musings, projects, news and ideas that have captured my attention.
+        <a href="/blog/exploration-and-emergence">Exploration &amp; emergence</a> is a home for me to share musings, projects, news and ideas that have captured my attention.
         I expect to muse on AI (safety, architecture, use), technical design, security, product, language design, software and hardware.
     </p>
 </SimpleContentLayout>
