--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
-import '../styles/global.css';
-import TopBar from '../components/TopBar.astro';
+import '@/styles/global.css';
+import TopBar from '@/components/TopBar.astro';
 
 export interface Props {
   headTitle: string;
