--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -1,6 +1,7 @@
 ---
 import { getEntry, render, getCollection } from 'astro:content';
-import BlogPostLayout from '../../layouts/BlogPostLayout.astro';
+import SimpleContentLayout from '@/layouts/SimpleContentLayout.astro';
+import Tags from '@/components/Tags.astro';
 
 export async function getStaticPaths() {
     const posts = await getCollection('blog');
@@ -15,8 +16,13 @@ if (!post) {
     throw new Error(`Blog post not found: ${id}`);
 }
 const { Content, headings } = await render(post);
+const { title, tags } = post.data;
+const hasTagsBlock = tags && tags.length > 0;
 ---
 
-<BlogPostLayout {...post.data}>
+<SimpleContentLayout headTitle={`Blog | ${title}`} title={title} isArticle={true}>
+    {hasTagsBlock && <div class="mb-4">
+        <Tags names={tags} slot="beforeProse" />
+    </div>}
     <Content />
-</BlogPostLayout>
+</SimpleContentLayout>
