--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import SimpleContentLayout from '../layouts/SimpleContentLayout.astro';
+import SimpleContentLayout from '@/layouts/SimpleContentLayout.astro';
 ---
 
 <SimpleContentLayout title="Welcome">
