--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -1,5 +1,37 @@
 ---
 ---
-<div class="prose max-w-none prose-hr:border-gray-400 prose-hr:m-8 prose-li:m-0 prose-a:hover:text-blue-700 prose-code:bg-gray-100 prose-code:p-1 prose-code:rounded prose-code:before:content-none prose-code:after:content-none prose-strong:text-red-700">
-  <slot />
+<style>
+    @reference "@/styles/global.css";
+    .prose-wrapper {
+        @apply prose max-w-none prose-hr:border-gray-400 prose-hr:m-8 prose-li:m-0 prose-a:text-link prose-a:hover:text-link-hover prose-code:bg-gray-100 prose-code:p-1 prose-code:rounded prose-code:before:content-none prose-code:after:content-none prose-strong:text-red-700;
+    }
+
+    /** FOOTNOTE MODIFICATIONS */
+
+    /* Uses https://github.com/tailwindlabs/tailwindcss/pull/17147 */
+    /* Enables sr-only which is used for the footnotes */
+    @source inline('sr-only footnotes');
+
+    /*
+      We use :global(..) to target a class on an element which doesn't get automatically tagged
+      with the attribute saying it belongs to this component
+      See: https://docs.astro.build/en/guides/styling/
+    */
+    .prose-wrapper :global(.footnotes) {
+        /* Remove the emoji */
+        .data-footnote-backref {
+            font-family: ui-sans-serif, system-ui, sans-serif;
+        }
+
+        /* Adds a pseudo-hr before the footnotes */
+        &::before {
+            content: "";
+            display: block;
+            
+            @apply border-t border-gray-400 m-8;
+        }
+    }
+</style>
+<div class="prose-wrapper">
+    <slot />
 </div>
