--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -1,23 +1,25 @@
 ---
 ---
-<nav class="w-full bg-white shadow-sm py-4 px-8 flex items-center justify-between">
-  <div class="flex items-center gap-4">
-    <a href="/blog/exploration-and-emergence" class="font-bold text-lg text-gray-800 hover:text-gray-600">
+<nav class="w-full bg-white shadow-sm py-3 px-4 sm:py-4 sm:px-8">
+  <div class="flex items-center gap-2 sm:gap-4 w-full flex-wrap sm:flex-nowrap">
+    <a href="/" class="font-bold text-base sm:text-lg text-gray-800 hover:text-link-hover">
         Exploration & Emergence
     </a>
-    <a href="/" class="ml-6 text-gray-600 hover:text-gray-900">Home</a>
-    <a href="/blog" class="ml-2 text-gray-600 hover:text-gray-900">Blog</a>
-    <a href="/about" class="ml-2 text-gray-600 hover:text-gray-900">About</a>
-  </div>
-  <div class="flex items-center gap-4">
-    <a href="/about">
-      <img src="/profile-picture.png" alt="David Edey" class="w-8 h-8 rounded-full border border-gray-300" />
-    </a>
-    <a href="https://github.com/dhedey" target="_blank" rel="noopener" title="GitHub">
-      <img src="/github-logo.png" alt="GitHub" class="w-6 h-6" />
-    </a>
-    <a href="https://www.linkedin.com/in/davidedey/" target="_blank" rel="noopener" title="LinkedIn">
-      <img src="/linkedin-logo.png" alt="LinkedIn" class="w-6 h-6" />
-    </a>
+    <div class="flex items-center gap-2 sm:gap-4 sm:order-3 flex-grow justify-end">
+        <a href="/about">
+        <img src="/profile-picture.png" alt="David Edey" class="w-8 max-w-8 h-8 rounded-full border border-gray-300" />
+        </a>
+        <a href="https://github.com/dhedey" target="_blank" rel="noopener" title="GitHub">
+        <img src="/github-logo.png" alt="GitHub" class="w-6 max-w-6 h-6" />
+        </a>
+        <a href="https://www.linkedin.com/in/davidedey/" target="_blank" rel="noopener" title="LinkedIn">
+        <img src="/linkedin-logo.png" alt="LinkedIn" class="w-6 max-w-6 h-6" />
+        </a>
+    </div>
+    <div class="flex flex-row flex-wrap gap-2 w-full sm:w-auto sm:gap-4">
+      <a href="/" class="text-link hover:text-link-hover">Home</a>
+      <a href="/blog" class="text-link hover:text-link-hover">Blog</a>
+      <a href="/about" class="text-link hover:text-link-hover">About</a>
+    </div>
   </div>
 </nav>
