--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -17,7 +17,7 @@ const props: Props = Astro.props;
   </head>
   <body class="bg-gray-100">
     <TopBar />
-    <main class="flex flex-col items-center p-6 min-h-screen">
+    <main class="flex flex-col items-center p-4 sm:p-6 min-h-screen">
       <slot />
     </main>
   </body>
