--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import SimpleContentLayout from '@/layouts/SimpleContentLayout.astro';
 ---
 
 <SimpleContentLayout title="About">
-    <figure class="flex justify-center items-center gap-6 p-6 not-prose">
+    <figure class="flex justify-center items-center gap-6 p-6 not-prose flex-wrap">
         <img 
             src="/profile-picture.png" 
             alt="David Edey"
