--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,5 @@ import SimpleContentLayout from '@/layouts/SimpleContentLayout.astro';
 ---
 
 <SimpleContentLayout title="Welcome">
-    Check out my <a href="/blog">blog posts</a> or learn more <a href="/about">about me and this website</a>.
+    Check out my <a href="/blog">blog posts</a> or learn more <a href="/about">about me</a> or how this <a href="/blog/exploration-and-emergence">website was named</a>.
 </SimpleContentLayout>
