--- a/src/pages/blog/[id].astro
+++ b/src/pages/blog/[id].astro
@@ -16,13 +16,18 @@ if (!post) {
     throw new Error(`Blog post not found: ${id}`);
 }
 const { Content, headings } = await render(post);
-const { title, tags } = post.data;
-const hasTagsBlock = tags && tags.length > 0;
+const { title, tags, pubDate, description } = post.data;
 ---
 
 <SimpleContentLayout headTitle={`Blog | ${title}`} title={title} isArticle={true}>
-    {hasTagsBlock && <div class="mb-12">
-        <Tags names={tags} slot="beforeProse" />
-    </div>}
+    <div slot="beforeProse" class="mb-8">
+        <div class="flex mb-4 flex-wrap gap-y-4">
+            <div class="text-sm flex-grow">{pubDate.toISOString().split('T')[0]}</div>
+            <Tags names={tags} />
+        </div>
+        <div class="w-full text-gray-600 p-4 italic bg-gray-100 rounded">
+            {description}
+        </div>
+    </div>
     <Content />
 </SimpleContentLayout>
