--- a/src/layouts/SimpleContentLayout.astro
+++ b/src/layouts/SimpleContentLayout.astro
@@ -5,6 +5,7 @@ import Prose from '@/components/Prose.astro';
 interface Props {
     title: string;
     headTitle?: string;
+    metaDescription?: string;
     isArticle?: boolean;
 }
 const props: Props = Astro.props;
@@ -14,7 +15,7 @@ const ContainerElement = props.isArticle ? 'article' : 'div';
 
 ---
 
-<BaseLayout headTitle={headTitle}>
+<BaseLayout headTitle={headTitle} metaDescription={props.metaDescription}>
     <ContainerElement class="bg-white rounded-lg shadow p-4 sm:p-8 w-full max-w-2xl md:max-w-3xl lg:max-w-4xl mx-2 sm:mx-0">
         <h1 class="text-3xl font-bold mb-4">{title}</h1>
         <slot name="beforeProse" />
