--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -11,4 +11,4 @@ const { name } = Astro.props;
         @apply text-sm font-semibold no-underline text-gray-700 hover:text-gray-900 bg-blue-100 hover:bg-blue-200 rounded-full px-1.5;
     }
 </style>
-<a href={`/blog/tag/${name}`} class="tag">{name}</a>
+<a href={`/blog/tag/${name}`} class="tag">#{name}</a>
