--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
-import SimpleContentLayout from '@/layouts/SimpleContentLayout.astro';
+import SimpleProseLayout from '@/layouts/SimpleProseLayout.astro';
 ---
 
-<SimpleContentLayout title="About">
+<SimpleProseLayout title="About">
     <figure class="flex justify-center items-center gap-6 p-6 not-prose flex-wrap">
         <img 
             src="/profile-picture.png" 
@@ -26,4 +26,4 @@ import SimpleContentLayout from '@/layouts/SimpleContentLayout.astro';
         <a href="/blog/exploration-and-emergence">Exploration &amp; emergence</a> is a home for me to share musings, projects, news and ideas that have captured my attention.
         I expect to muse on AI (safety, architecture, use), technical design, security, product, language design, software and hardware.
     </p>
-</SimpleContentLayout>
+</SimpleProseLayout>
