--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import SimpleContentLayout from '@/layouts/SimpleContentLayout.astro';
+import SimpleProseLayout from '@/layouts/SimpleProseLayout.astro';
 ---
 
-<SimpleContentLayout title="Welcome">
+<SimpleProseLayout title="Welcome">
     Check out my <a href="/blog">blog posts</a> or learn more <a href="/about">about me</a> or how this <a href="/blog/exploration-and-emergence">website was named</a>.
-</SimpleContentLayout>
+</SimpleProseLayout>
