--- a/src/components/BlogPostList.astro
+++ b/src/components/BlogPostList.astro
@@ -16,7 +16,7 @@ function formatDate(date: Date) {
 
 <ul class="w-full">
     {posts.map(post => (
-        <li>
+        <li class="m-6 list-disc">
             <div class="flex flex-col gap-2 mb-6">
                 <span class="text-xl font-semibold">{formatDate(post.data.pubDate)} | <a href={`/blog/${post.id}`} class="text-blue-600 hover:underline">{post.data.title}</a></span>
                 <div class="text-gray-500 text-sm">{post.data.description}</div>
